2007-04-11 Sarka Todorova <sarka.todorova@cern.ch>
        * faster initialization (identify prototypes and recalculate) 
	* persistent problem: unidentified RPC layers in BMS stations 
        * tagged as MuonTrackingGeometry-00-00-40

2007-04-10 Sarka Todorova <sarka.todorova@cern.ch>
        * fix crashes in dbg (from MuonIdHelpers when identifing MTG active surfaces)
	* known problems, to be fixed : unidentified RPC layers in BMS stations
	* slow initialization (mainly MDT identification) 
        * tagged as MuonTrackingGeometry-00-00-39

2007-03-22 Andi Salzburger <Anreas.Salzburger@cern.ch>
        * remove redundant files
        * tagged as MuonTrackingGeometry-00-00-38

2007-03-20 Andi Salzburger <Anreas.Salzburger@cern.ch>
        * first configurable version
        * tagged as MuonTrackingGeometry-00-00-37

2007-03-14 Sarka Todorova <sarka.todorova@cern.ch>
	* temporary(?) fix of retrieval of BOG stations with cutouts (MGM tree id link broken)
	* tagged MuonTrackingGeometry-00-00-36

2007-03-13 Sarka Todorova <sarka.todorova@cern.ch>
	* station layer representation identified
	* tagged MuonTrackingGeometry-00-00-35

2007-03-12 Sarka Todorova <sarka.todorova@cern.ch>
	* fixed csc layer identification
	* tagged MuonTrackingGeometry-00-00-34

2007-03-12 Sarka Todorova <sarka.todorova@cern.ch>
	* collected material for station layer representation
	* clean-up printout 
	* tagged MuonTrackingGeometry-00-00-33

2007-03-12 Sarka Todorova <sarka.todorova@cern.ch>
	* remove error messages from BooleanConstructor
	  ( originate from GeoShape.volume(), replaced by MSTB::getVolume() )
	* tagged MuonTrackingGeometry-00-00-32

2007-02-23 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix (MSB)  
	* tagged MuonTrackingGeometry-00-00-31

2007-02-22 Sarka Todorova <sarka.todorova@cern.ch>
	* update MTGB for change of interface ('empty' volumes)
	* update MSB for changes in MuonGeoModel 
	* tagged MuonTrackingGeometry-00-00-30
